<resources>
    <string name="app_name_logo">Logo Trybnb</string>
    <string name="app_name">Trybnb</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_thumbnail_perfil">Thumbnail perfil</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="reservations">Reservas</string>
    <string name="create_reservations">Criar Reservas</string>
    <string name="profile">Perfil</string>
    <string name="email_warning">O campo Login é obrigatório</string>
    <string name="password_warning">O campo Password é obrigatório</string>
    <string name="login_succeeded">Login feito com sucesso!</string>
    <string name="create_reservation">Criar Reserva</string>
    <string name="first_name">Nome do hóspede</string>
    <string name="last_name">Sobrenome do hóspede</string>
    <string name="checkin">Checkin</string>
    <string name="checkout">Checkout</string>
    <string name="addtional_needs">Necessidades adicionais</string>
    <string name="total_price">Preço total</string>
    <string name="deposit_paid">Depósito Pago</string>
</resources>